--- a/GUIs/Viewer/resources/Viewer.ui
+++ b/GUIs/Viewer/resources/Viewer.ui
@@ -31,6 +31,30 @@ QPushButton:!enabled {
 	background-color: #d9d9d9;
 	border-style: outset;
 	border-width: 1px;
+}
+QLineEdit:focus
+{
+	border-color: black;
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 0px;
+	background-color:white;
+}
+QLineEdit:!focus
+{
+	border-color: black;
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 0px;
+	background-color: rgba(0, 0, 0, 15);
+}
+QLineEdit:!enabled
+{
+	border-color: black;
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 0px;
+	background-color: rgba(0, 0, 0, 75);
 }</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" rowstretch="0,10,0" columnstretch="0,0,10,0,0,0,0,0,0">
@@ -54,7 +78,7 @@ border-color: black;</string>
     </widget>
    </item>
    <item row="2" column="0" colspan="4">
-    <layout class="QGridLayout" name="view_opt_layout" columnstretch="0,0,0,0,0,0">
+    <layout class="QGridLayout" name="view_opt_layout" columnstretch="0,10,0,0,0">
      <item row="0" column="3">
       <widget class="Raw_im_chk" name="raw_view">
        <property name="text">
@@ -62,7 +86,7 @@ border-color: black;</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0" colspan="6">
+     <item row="2" column="0" colspan="5">
       <layout class="QHBoxLayout" name="cam_config_layout" stretch="0,0,10,0,0,10,0,0">
        <item>
         <widget class="QLabel" name="fps_lbl">
@@ -92,20 +116,13 @@ border-color: black;</string>
           </size>
          </property>
          <property name="styleSheet">
-          <string notr="true">QLineEdit:focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color:white;
-}
-QLineEdit:!focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color: rgba(0, 0, 0, 15);
-}</string>
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>---</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
@@ -150,20 +167,13 @@ QLineEdit:!focus
           </size>
          </property>
          <property name="styleSheet">
-          <string notr="true">QLineEdit:focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color:white;
-}
-QLineEdit:!focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color: rgba(0, 0, 0, 15);
-}</string>
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>---</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
@@ -208,20 +218,13 @@ QLineEdit:!focus
           </size>
          </property>
          <property name="styleSheet">
-          <string notr="true">QLineEdit:focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color:white;
-}
-QLineEdit:!focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color: rgba(0, 0, 0, 15);
-}</string>
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>---</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
@@ -241,25 +244,22 @@ QLineEdit:!focus
       </spacer>
      </item>
      <item row="0" column="4">
-      <widget class="Base_use_chk" name="base_img_chk">
-       <property name="toolTip">
-        <string>If checked, image processing will start from the image that the tracking loop is using. Otherwise, a raw image will be used to start</string>
-       </property>
-       <property name="text">
-        <string>Use Tracking</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="5">
       <widget class="QCheckBox" name="overlay">
        <property name="text">
         <string>Overlay</string>
        </property>
        <property name="checked">
         <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="hmag_label">
+       <property name="styleSheet">
+        <string notr="true">border-style: none;</string>
+       </property>
+       <property name="text">
+        <string>Hmag:</string>
        </property>
       </widget>
      </item>
@@ -275,41 +275,17 @@ QLineEdit:!focus
         </sizepolicy>
        </property>
        <property name="styleSheet">
-        <string notr="true">QLineEdit:focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color:white;
-}
-QLineEdit:!focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color: rgba(0, 0, 0, 15);
-}
-QLineEdit:!enabled
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color: rgba(0, 0, 0, 75);
-}</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="hmag_label">
-       <property name="styleSheet">
-        <string notr="true">border-style: none;</string>
+        <string notr="true"/>
        </property>
        <property name="text">
-        <string>Hmag:</string>
+        <string>---</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="6">
+     <item row="1" column="0" colspan="5">
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QPushButton" name="rst_zoom">
@@ -539,7 +515,7 @@ QTabBar::tab:only-one {
            <number>15</number>
           </property>
           <item row="0" column="0">
-           <widget class="QCheckBox" name="bias_sub">
+           <widget class="Bias_chk" name="bias_sub">
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -549,7 +525,7 @@ QTabBar::tab:only-one {
            </widget>
           </item>
           <item row="1" column="0">
-           <widget class="QCheckBox" name="bkgrd_sub">
+           <widget class="Bkgrd_chk" name="bkgrd_sub">
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -559,7 +535,7 @@ QTabBar::tab:only-one {
            </widget>
           </item>
           <item row="2" column="0">
-           <widget class="QCheckBox" name="ref_sub">
+           <widget class="Ref_chk" name="ref_sub">
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -677,7 +653,7 @@ QTabBar::tab:only-one {
            <number>10</number>
           </property>
           <item row="0" column="1" alignment="Qt::AlignLeft">
-           <widget class="Scale_chk_box" name="sqrt_scl">
+           <widget class="Sqrt_chk" name="sqrt_scl">
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -687,7 +663,7 @@ QTabBar::tab:only-one {
            </widget>
           </item>
           <item row="0" column="0" alignment="Qt::AlignHCenter">
-           <widget class="Scale_chk_box" name="log_scl">
+           <widget class="Log_chk" name="log_scl">
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -948,7 +924,7 @@ border-right-style: none;</string>
            <number>10</number>
           </property>
           <item row="0" column="0" alignment="Qt::AlignHCenter">
-           <widget class="QCheckBox" name="med_filt">
+           <widget class="Med_filt_chk" name="med_filt">
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -1151,6 +1127,12 @@ border-width: 1px;</string>
           </property>
           <item row="0" column="1">
            <widget class="QComboBox" name="psf_loc_dropdown">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>23</height>
+             </size>
+            </property>
             <property name="styleSheet">
              <string notr="true">QComboBox {
 	border-radius: 0px;
@@ -2137,6 +2119,236 @@ QPushButton {
          </layout>
         </widget>
        </item>
+       <item>
+        <spacer name="tracking_tab_spacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="mode_tab">
+      <attribute name="title">
+       <string>Mode</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="View_Selection" name="view_mode_frame">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>380</width>
+           <height>70</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QFrame
+{
+	border-radius: 10px;
+	border-style: ridge;
+	border-width: 1px;
+}</string>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::Panel</enum>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_8" columnstretch="1,1">
+          <property name="leftMargin">
+           <number>10</number>
+          </property>
+          <property name="topMargin">
+           <number>5</number>
+          </property>
+          <property name="rightMargin">
+           <number>15</number>
+          </property>
+          <property name="bottomMargin">
+           <number>5</number>
+          </property>
+          <property name="verticalSpacing">
+           <number>1</number>
+          </property>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="view_mode_dropdown">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">QComboBox {
+	border-radius: 0px;
+	border-width: 1px;
+	border-color: black;
+	border-style: solid;
+}
+
+QComboBox QAbstractItemView{
+	border-style: none;
+}</string>
+            </property>
+            <item>
+             <property name="text">
+              <string>Pupil viewing</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Focal plane</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Custom</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="view_mode_lbl">
+            <property name="styleSheet">
+             <string notr="true">border: 0px</string>
+            </property>
+            <property name="text">
+             <string>Viewing Mode</string>
+            </property>
+            <property name="margin">
+             <number>5</number>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" colspan="2">
+           <widget class="QFrame" name="view_mode_custom_frame">
+            <property name="styleSheet">
+             <string notr="true">QFrame{
+	border-style:none;
+}</string>
+            </property>
+            <layout class="QHBoxLayout" name="view_mode_layout" stretch="10,0,0">
+             <property name="spacing">
+              <number>-1</number>
+             </property>
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>5</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <spacer name="view_mode_custom_spacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="custom_pos">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="minimumSize">
+                <size>
+                 <width>65</width>
+                 <height>20</height>
+                </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true"/>
+               </property>
+               <property name="text">
+                <string>---</string>
+               </property>
+               <property name="frame">
+                <bool>true</bool>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+               <property name="clearButtonEnabled">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="view_mode_custom_btn">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="minimumSize">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">QPushButton { 
+	background-color: #c7c7c7;
+	border-radius: 0px;
+	border-style: inset;
+	border-width: 1px;
+}
+QPushButton:pressed {
+	background-color: #c1ffba;
+	border-radius: 0px;
+	border-style: outset;
+	border-width: 1px;
+}</string>
+               </property>
+               <property name="text">
+                <string>↵</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <spacer name="mode_tab_spacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
       </layout>
      </widget>
     </widget>
@@ -2182,11 +2394,6 @@ QPushButton {
    <extends>QFrame</extends>
    <header>Viewer_Widgets.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>Scale_chk_box</class>
-   <extends>QCheckBox</extends>
-   <header>Viewer_Widgets.h</header>
   </customwidget>
   <customwidget>
    <class>Img</class>
@@ -2236,7 +2443,38 @@ QPushButton {
    <header>Viewer_Widgets.h</header>
   </customwidget>
   <customwidget>
-   <class>Base_use_chk</class>
+   <class>View_Selection</class>
+   <extends>QFrame</extends>
+   <header>Viewer_Widgets.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>Bias_chk</class>
+   <extends>QCheckBox</extends>
+   <header>Viewer_Widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Bkgrd_chk</class>
+   <extends>QCheckBox</extends>
+   <header>Viewer_Widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Ref_chk</class>
+   <extends>QCheckBox</extends>
+   <header>Viewer_Widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Log_chk</class>
+   <extends>QCheckBox</extends>
+   <header>Viewer_Widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Sqrt_chk</class>
+   <extends>QCheckBox</extends>
+   <header>Viewer_Widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Med_filt_chk</class>
    <extends>QCheckBox</extends>
    <header>Viewer_Widgets.h</header>
   </customwidget>
